# gdcm-abi

./: CMakeLists.txt  Copyright.txt  README.rst
Applications/Cxx/: gdcmanon.cxx  gdcmconv.cxx  gdcmdump.cxx  gdcmgendir.cxx  gdcmimg.cxx  gdcminfo.cxx  gdcmpdf.cxx  gdcmraw.cxx  gdcmscanner.cxx  gdcmtar.cxx
CMake/: InstallMacros.cmake
CMake/ExportConfiguration/: CMakeLists.txt  GDCMConfig.cmake.in
Source/Common/: CMakeLists.txt
Source/DataDictionary/: Agfa.xml  CSAHeader.xml  DICOMV3.xml  DefaultDicts.xsl  HarvestedPrivate.xml  Part6.xml  Part67.xsl  Part6PDF.xsl  Part6tod3t.xsl  Part6togdcm1.xsl  Part7.xml  Part7.xsl  Siemens.xml  TagToType.xsl  UIDs.xml  VM.xsl  cp699.xml  dicom3tools.xsl  gdcm1.xsl  gdcm2html.xsl  gdcm2pdf.xsl  getname.xsl  getowner.xsl  getretired.xsl  order.xsl  priv2html.xsl  redo.xsl  redo2.xsl  sort.xsl  vital.xml
Source/DataStructureAndEncodingDefinition/: gdcmReader.cxx
Source/InformationObjectDefinition/: Part3.xml  Part3.xsl  Part4.xml  Part4.xsl  getelements.xsl  ma2html.xsl  ma2pdf.xsl
Utilities/VTK/Applications/: gdcm2vtk.cxx  gdcmviewer.cxx
Utilities/doxygen/: CMakeLists.txt
Utilities/gdcmcharls/: CMakeLists.txt
Utilities/gdcmexpat/: CMakeLists.txt
Utilities/gdcmjpeg/: CMakeLists.txt
Utilities/gdcmopenjpeg-v1/: CMakeLists.txt
Utilities/gdcmopenjpeg-v1/libopenjpeg/: opj_includes.h
Utilities/gdcmopenjpeg-v2/: CMakeLists.txt
Utilities/gdcmuuid/: CMakeLists.txt
Utilities/gdcmzlib/: CMakeLists.txt
Utilities/getopt/: CMakeLists.txt
Utilities/socketxx/: CMakeLists.txt
Wrapping/: CMakeLists.txt
Wrapping/C/: CMakeLists.txt  gdcmCReader.cxx  gdcmCReader.h
